Update title and icons

--- a/public/options.html
+++ b/public/options.html
@@ -4,10 +4,7 @@
     <link rel="stylesheet" href="button.css" />
   </head>
   <body>
-    <div id="buttonDiv"></div>
-    <div>
-      <p>Choose a different background color!</p>
-    </div>
+    <p>No options for this extension yet :)</p>
     <script src="options.js"></script>
   </body>
 </html>
